syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// ShamanTalents message.
message ShamanTalents {
}

// END GENERATED

enum EarthTotem {
	NoEarthTotem = 0;
	EarthElementalTotem = 1;
	TremorTotem = 2;
	EarthbindTotem = 3;
}

enum AirTotem {
	NoAirTotem = 0;
	StormlashTotem = 1;
	GroundingTotem = 2;
	CapacitorTotem = 3;
	SpiritLinkTotem = 4;
}

enum FireTotem {
	NoFireTotem = 0;
	MagmaTotem = 1;
	SearingTotem = 2;
	FireElementalTotem = 3;
}

enum WaterTotem {
	NoWaterTotem = 0;
	HealingTideTotem = 1;
	HealingStreamTotem = 2;
	ManaTideTotem = 3;
}

message ShamanTotems {
    enum TotemType {
	    TypeUnknownTotem = 0;
	    Earth = 1;
	    Air = 2;
	    Fire = 3;
	    Water = 4;
    }

	EarthTotem earth = 1;
	AirTotem air = 2;
	FireTotem fire = 3;
	WaterTotem water = 4;
}

enum ShamanShield {
	NoShield = 0;
	WaterShield = 1;
	LightningShield = 2;
}

enum ShamanImbue {
    NoImbue = 0;
    WindfuryWeapon = 1;
    FlametongueWeapon = 2;
    FrostbrandWeapon = 3;
	EarthlivingWeapon = 4;
    RockbiterWeapon = 5;
}

enum ShamanSyncType {
  NoSync = 0;
  SyncMainhandOffhandSwings = 1;
  DelayOffhandSwings = 2;
	Auto = 3;
}

message FeleAutocastSettings {
    bool autocast_fireblast = 1;
    bool autocast_firenova = 2;
    bool autocast_immolate = 3;
    bool autocast_empower = 4;
    bool no_immolate_wfunleash = 5;
    double no_immolate_duration = 6;
}

message ShamanOptions {
	ShamanShield shield = 1;
	ShamanImbue imbue_mh = 2;
    ShamanImbue imbue_mh_swap = 4;

    FeleAutocastSettings fele_autocast = 3;
}

message ElementalShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;

		enum ThunderstormRange {
			UnsetTSRange = 0;
			TSInRange = 1;
			TSOutofRange = 2;
		}
		ThunderstormRange thunderstormRange = 2;
	}
	Options options = 3;
}

message EnhancementShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;
		ShamanSyncType sync_type = 2;
		ShamanImbue imbue_oh = 3;
        ShamanImbue imbue_oh_swap = 4;
	}

	Options options = 3;
}

enum ShamanHealSpell {
	AutoHeal = 0;
	HealingWave = 1;
	HealingSurge = 2;
	ChainHeal = 3;
}

message RestorationShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;
		int32 earth_shield_p_p_m = 2;
	}

	Options options = 3;
}
